Fix alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -83,7 +83,7 @@
 
 .center_form {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -224,7 +224,7 @@
 
   .center_form {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
